gccida/c3/general_induction_var
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/general_induction_var/src/loop.c:6753:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode addr_mode) 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/general_induction_var/src/loop.c:6762:6: error: use of undeclared identifier 'v18'
rtx *v18; // rcx 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/general_induction_var/src/loop.c:6780:20: error: expected expression
*src_reg = *( rtx *)( *( _QWORD *)( aux[28] + 8LL) + 32LL); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/general_induction_var/src/loop.c:6798:14: error: expected expression
v18 = ( rtx *)( v13->fld[0].rtwint + 16); 
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/general_induction_var/src/loop.c:6798:1: error: use of undeclared identifier 'v18'
v18 = ( rtx *)( v13->fld[0].rtwint + 16); 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/general_induction_var/src/loop.c:6803:1: error: use of undeclared identifier 'v18'
v18 = const_int_rtx + 520; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/general_induction_var/src/loop.c:6805:14: error: use of undeclared identifier 'v18'
*mult_val = *v18; 
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/general_induction_var/src/loop.c:6806:13: error: expected ';' after expression
v13 = ( rtx)v13[1]; 
            ^
            ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/general_induction_var/src/loop.c:6814:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v16 = (  struct rtx_def *)v13[1]; 
                          ^~~~~~
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/general_induction_var/src/obj/loop.o] Error 1
